fix(PaperGroup): ensure component is full width on narrow displays

--- a/src/components/Paper/PaperGroup/style.css
+++ b/src/components/Paper/PaperGroup/style.css
@@ -3,6 +3,7 @@
   grid-gap: var(--space-2);
   overflow: hidden; /* prevents scrollbar issues on sliding transitions */
   padding-block: var(--space-3);
+  width: 100vw;
 }
 
 @media (min-width: 38rem) {
